--- a/requirements.txt
+++ b/requirements.txt
@@ -25,7 +25,7 @@ ml-dtypes==0.2.0
 networkx==3.1
 numpy==1.24.3
 oauthlib==3.2.2
-opencv-python==4.5.3
+opencv==3.1
 opt-einsum==3.3.0
 packaging==23.2
 Pillow==10.1.0
