--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+absl-py==2.0.0
 astunparse==1.6.3
 blinker==1.6.3
 cachetools==5.3.1
@@ -25,7 +26,7 @@ ml-dtypes==0.2.0
 networkx==3.1
 numpy==1.24.3
 oauthlib==3.2.2
-opencv-python
+opencv_python==4.8.0.76
 opt-einsum==3.3.0
 packaging==23.2
 Pillow==10.1.0
@@ -49,4 +50,5 @@ urllib3==2.0.6
 Werkzeug==3.0.0
 wrapt==1.14.1
 gunicorn==20.1.0
+
 
