--- a/requirements.txt
+++ b/requirements.txt
@@ -1,54 +1,141 @@
-absl-py==2.0.0
+absl-py==1.4.0
+aniso8601==9.0.1
+asttokens==2.2.1
 astunparse==1.6.3
-blinker==1.6.3
+attrs==23.1.0
+Augmentor==0.2.12
+backcall==0.2.0
+blinker==1.6.2
 cachetools==5.3.1
-certifi==2023.7.22
-charset-normalizer==3.3.0
-click==8.1.7
-Flask==3.0.0
+certifi==2023.5.7
+cffi==1.15.1
+charset-normalizer==3.1.0
+click==8.1.3
+colorama==0.4.6
+comm==0.1.3
+contourpy==1.1.0
+cryptography==41.0.1
+cycler==0.11.0
+dataclasses==0.6
+debugpy==1.6.7
+decorator==5.1.1
+docopt==0.6.2
+executing==1.2.0
+Flask==2.3.2
+Flask-Cors==3.0.10
+Flask-Login==0.6.2
+Flask-MySQL==1.5.2
+Flask-MySQLdb==1.0.1
+Flask-RESTful==0.3.10
+Flask-WTF==1.1.1
 flatbuffers==23.5.26
+fonttools==4.40.0
 gast==0.4.0
-google-auth==2.23.3
+gensim==4.3.1
+google-auth==2.19.1
 google-auth-oauthlib==1.0.0
 google-pasta==0.2.0
-grpcio==1.59.0
-h5py==3.10.0
+grpcio==1.54.2
+h5py==3.8.0
 idna==3.4
 imageio==2.31.5
+imbalanced-learn==0.11.0
+ipykernel==6.23.3
+ipython==8.14.0
 itsdangerous==2.1.2
+jax==0.4.12
+jedi==0.18.2
 Jinja2==3.1.2
-keras==2.13.1
+joblib==1.2.0
+jsonschema==4.19.1
+jsonschema-specifications==2023.7.1
+jupyter_client==8.3.0
+jupyter_core==5.3.1
+keras==2.12.0
+kiwisolver==1.4.4
 lazy_loader==0.3
-libclang==16.0.6
-Markdown==3.5
+libclang==16.0.0
+Markdown==3.4.3
 MarkupSafe==2.1.3
+matplotlib==3.7.1
+matplotlib-inline==0.1.6
 ml-dtypes==0.2.0
+mysql-connector-python==8.0.33
+mysqlclient==2.1.1
+nest-asyncio==1.5.6
 networkx==3.1
-numpy==1.24.3
+nibabel==5.1.0
+nltk==3.8.1
+numpy==1.23.5
+numpy-stl==3.0.1
 oauthlib==3.2.2
-opencv_python==4.8.0.76
+opencv-python==4.8.0.76
 opt-einsum==3.3.0
-packaging==23.2
-Pillow==10.1.0
-protobuf==4.24.4
+packaging==23.1
+pandas==2.0.2
+parso==0.8.3
+pickleshare==0.7.5
+Pillow==9.5.0
+pipreqs==0.4.13
+platformdirs==3.8.0
+pooch==1.7.0
+prompt-toolkit==3.0.38
+protobuf==3.20.3
+psutil==5.9.5
+pure-eval==0.2.2
 pyasn1==0.5.0
 pyasn1-modules==0.3.0
+pycparser==2.21
+pydicom==2.4.3
+Pygments==2.15.1
+pymesh==1.0.2
+PyMySQL==1.0.3
+pyparsing==3.1.0
+pyproject-toml==0.0.10
+python-dateutil==2.8.2
+python-utils==3.8.1
+pytz==2023.3
+pyvista==0.42.2
+pywin32==306
+PyYAML==6.0.1
+pyzmq==25.1.0
+referencing==0.30.2
+regex==2023.6.3
 requests==2.31.0
 requests-oauthlib==1.3.1
+rpds-py==0.10.4
 rsa==4.9
-scikit-image==0.20.0
-scipy>=1.8
+scikit-image==0.22.0
+scikit-learn==1.2.2
+scipy==1.10.1
+scooby==0.7.4
+seaborn==0.12.2
 six==1.16.0
-tensorboard==2.13.0
-tensorboard-data-server==0.7.1
-tensorflow==2.13.1
-tensorflow-estimator==2.13.0
+smart-open==6.3.0
+stack-data==0.6.2
+tabulate==0.9.0
+tensorboard==2.12.3
+tensorboard-data-server==0.7.0
+tensorflow==2.12.0
+tensorflow-estimator==2.12.0
+tensorflow-intel==2.12.0
+tensorflow-io-gcs-filesystem==0.31.0
 termcolor==2.3.0
-tifffile==2023.7.10
-typing_extensions==4.5.0
-urllib3==2.0.6
-Werkzeug==3.0.0
+threadpoolctl==3.1.0
+tifffile==2023.9.26
+toml==0.10.2
+tornado==6.3.2
+tqdm==4.65.0
+traitlets==5.9.0
+typing_extensions==4.6.3
+tzdata==2023.3
+urllib3==1.26.16
+vtk==9.2.6
+wcwidth==0.2.6
+Werkzeug==2.3.6
 wrapt==1.14.1
-gunicorn==20.1.0
+WTForms==3.0.1
+yarg==0.1.9
+
 
 
